rewards displayed in Home page

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -41,3 +41,18 @@
 code {
   color: #ff00ff;
 }
+
+/* Container holding the image and the text */
+.imgContainer {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+/* Centered text */
+.centeredText {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(25%, -75%);
+}
