--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -56,3 +56,18 @@ code {
   left: 50%;
   transform: translate(25%, -75%);
 }
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  display: inline;
+}
+
+a {
+  padding: 12px;
+  margin-top: 24px;
+}
