nav top padding

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -61,6 +61,7 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  padding-top: 12px;
 }
 
 li {
@@ -69,5 +70,4 @@ li {
 
 a {
   padding: 12px;
-  margin-top: 24px;
 }
